Solve mobile extra padding problem

--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
+@-ms-viewport{
+    width: device-width;
+  }
+  
+  @media screen and (min-width: 376px){
 /* Font & Color styling*/
+
+.mobile-only{
+    display:none !important;
+}
+
 body{
     margin: 0;
     padding: 0;
 }
 
 h1{
-   font-size: 44px;
+   font-size: 46px;
 }
 
 h2{
-  font-size: 32px;  
+  font-size: 40px;  
 }
 
 h1, h2{
@@ -25,13 +35,13 @@ p, span{
 }
 
 .num-count{
-    font-size: 100px;
+    font-size: 92px;
     line-height: 0;
     font-weight: 700;
 }
 
 .text-count{
-    font-size: 24px;
+    font-size: 20px;
     line-height: 0;
     color: gray;
 }
@@ -77,7 +87,7 @@ button{
 }
 
 .btn-filled{
-    font-size: 16px;
+    font-size: 18px;
     color: white;
     background-color: hsl(322, 100%, 66%);
     border: none;
@@ -147,6 +157,7 @@ header{
 
 .hero p{
     margin-bottom: 50px;
+    font-size: 18px;
 }
 
 .numbers{
@@ -168,10 +179,12 @@ header{
 
 .text-illustration img, .text{
     flex: 0 1 auto;
+    width: 100%;
     max-width: 530px;
 }
 
 .ready-to-build{
+    text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -207,7 +220,7 @@ header{
 }
 
 .contacts-icons a{
-    font-size: 34px;
+    font-size: 44px;
     margin-right: 20px; 
 }
 
@@ -215,14 +228,284 @@ header{
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;
 }
+.newsletter-txt{
+    width: 360px;
+    margin-bottom: 40px;
+}
 
 .newsletter-span{
     grid-column: span 2;
 }
 
+#newsletter-tittle{
+    font-size: 24px;
+}
+
 input{
-    width: 360px;
+    width: 100%;
+    max-width: 360px;
     padding: 15px;
     border-radius: 5px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
+}
+
+/* MOBILE CSS */
+
+@media screen and (max-width: 375px){
+    .desktop-only{
+        display:none !important;
+    }
+
+    body{
+        margin: 0;
+        padding: 0;
+    }
+    
+    h1{
+       font-size: 24px;
+    }
+    
+    h2{
+      font-size: 20px;  
+    }
+    
+    h1, h2{
+      font-family: "Poppins", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+    }
+    p, span{
+      font-family: "Open Sans", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      line-height: 20px;
+      font-size: 14px;
+    }
+    
+    .num-count{
+        font-size: 60px;
+        line-height: 0;
+        font-weight: 700;
+    }
+    
+    .text-count{
+        font-size: 14px;
+        line-height: 0;
+        color: gray;
+    }
+
+    .count{
+        width: 155px;
+    }
+
+    .count img{
+        width: 30px;
+    }
+
+    #communities-formed{
+        margin-bottom: 100px;
+    }
+    
+    /* Illustrations */
+    
+    .bg-card{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        align-items: center;
+        background-color: hsl(207, 100%, 98%);
+        margin-top: -5px;
+        padding: 0px 30px 65px 0px;
+    }
+    
+    .bg-white{
+        padding: 185px 0px 100px px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+    
+    /* footer */
+    
+    .footer-info{
+        background-color: hsl(192, 100%, 9%);
+        margin-top:-5px;
+    }
+    
+    footer{
+        color: white;
+    }
+    
+    a{
+        text-decoration: none;
+        color: white;
+    }
+    
+    a:hover, a:active{
+        color: hsla(201, 100%, 45%, 1);
+    }
+    
+    /* buttons styling */
+    
+    button{
+      font-family: "Open Sans", sans-serif;
+      font-weight: 700;
+      font-style: normal;
+    }
+    
+    .btn-filled{
+        font-size: 12px;
+        color: white;
+        background-color: hsl(322, 100%, 66%);
+        border: none;
+        border-radius: 40px;
+        padding: 15px 40px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
+    
+    #btn-subscribe{
+        color: white;
+        background-color: hsl(322, 100%, 66%);
+        border: none;
+        border-radius: 5px;
+        padding: 15px 40px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
+    
+    .btn-filled:hover, .btn-filled:active, #btn-subscribe:hover, #btn-subscribe:active{
+        background-color: hsl(321, 100%, 78%);
+        cursor: pointer;
+    }
+    
+    .btn-outline{
+        font-size: 12px;
+        background-color: white;
+        color: hsl(322, 100%, 66%);
+        border: 1px solid hsl(322, 100%, 66%);
+        border-radius: 40px;
+        padding: 7px 20px;
+        font-weight: 600;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    }
+    
+    .btn-outline:hover, .btn-outline:active{
+        color: hsl(321, 100%, 78%);
+        cursor: pointer;
+        border-color: hsl(321, 100%, 78%);
+    }
+    
+    /* Display & Direction */
+    
+    header{
+        display: flex;
+        flex-direction: column;
+        padding: 28px 22px 10px 22px;
+    }
+    
+    .logo-and-button{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 120px;
+    }
+    
+    .logo-and-button img{
+        width: 100px;
+    }
+
+    .hero{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 100%; 
+    }
+    
+    .hero img{
+        margin: 100px 0px 120px 0px;
+        width: 100%;
+        max-width: 300px;
+    }
+    
+    .hero p{
+        margin-bottom: 50px;
+    }
+    
+    .numbers{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    
+    .numbers p, .numbers h3{
+        text-align: center;
+    }
+    
+    /* curved cards */
+    
+    .text-illustration{
+        text-align: center; 
+    }
+    
+    .text-illustration img, .text{
+        max-width: 250px;
+    }
+    
+    .ready-to-build{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 70px 70px 240px 70px;
+        text-align: center;
+    }
+    
+    /* footer */
+    
+    .footer-info{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        padding: 75px 25px 25px 45px;
+    }
+    
+    .contacts{
+        max-width: 305px;
+    }
+    
+    .contacts p{
+        margin-top: 30px;
+    }
+    
+    .contacts-text {
+        margin-top: 30px;
+    }
+    
+    .contacts-text img{
+        margin-right: 20px;
+    }
+    
+    .contacts-icons{
+        margin-top: 80px; 
+    }
+    
+    .contacts-icons a{
+        font-size: 32px;
+        margin-right: 20px; 
+    }
+    
+    #newsletter-tittle{
+        font-size: 20px;
+    }
+    
+    input{
+        padding: 15px;
+        border-radius: 5px;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    }
+      
+}
+
